# WebVoyager

./: .gitignore  README.md  pyproject.toml  run.py  run.sh  utils.py
data/: tasks_test.jsonl
